  number remains at 2.  This is to allow configuration files for newer
  Kyua versions to work on older Kyua versions, as there is no reason
  to forbid this.

* Fixed stacktrace gathering with FreeBSD's ancient version of GDB.
  GDB 6.1.1 (circa 2004) does not have the -ex flag so we need to
  generate a temporary GDB script and feed it to GDB with -x instead.

* Issue 141: Improved reporting of errors triggered by sqlite3.  In
  particular, all error messages are now tagged with their corresponding
  database filename and, if they are API-level errors, the name of the
  sqlite3 function that caused them.

* Issue 144: Improved documentation on the support for custom properties
  in the test metadata.


Changes in version 0.11
=======================

Released on October 23rd, 2014.

* Added support to print the details of all test cases (metadata and
  their output) to 'report'.  This is via a new '--verbose' flag which
  replaces the previous '--show-context'.

* Added support to specify the amount of physical disk space required
  by a test case.  This is in the form of a new "required_disk_space"
  metadata property, which can also be provided by ATF test cases as
  "require.diskspace".

* Assimilated the contents of all the kyua-*-tester(1) and
  kyua-*-interface(7) manual pages into more relevant places.  In
  particular, added more details on test program registration and their
  metadata to kyuafile(5), and added kyua-test-isolation(7) describing
  the isolation features of the test execution.

* Assimilated the contents of all auxiliary manual pages, including
  kyua-build-root(7), kyua-results-files(7), kyua-test-filters(7) and
  kyua-test-isolation(7), into the relevant command-specific manual
  pages.  This is for easier discoverability of relevant information
  when reading how specific Kyua commands work.

* Issue 30: Plumbed through support to query configuration variables
  from ATF's test case heads.  This resolves the confusing situation